--- a/index.html
+++ b/index.html
@@ -1,109 +1,113 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freaky Fashion - Startsida</title> <link rel="stylesheet" href="css/styles.css">
-    </head>
+    <title>FakeShop | Startsida</title>
+    <link rel="stylesheet" href="./css/styles.css">
+</head>
 <body>
+    <div class="wrapper">
+        <header class="header">
+            <div class="logotype">
+                <h1>logotype</h1>
+            </div>
+            <div class="actions">
+                <div class="search-bar">
+                    searchbar
+                </div>
+                <div class="action-buttons">
+                    <div>
+                        heart
+                    </div>
+                    <div>
+                        basket
+                    </div>
+                </div>
+            </div>
+            <ul class="navigation-list">
+                <li>Nyheter</li>
+                <li>Bästsäljare</li>
+                <li>Kvinnor</li>
+                <li>Män</li>
+            </ul>
+            <div class="hero">
+                <div class="hero-image">
+                    <img src="./images/placeholder-hero.jpg" alt="heroPlaceholder">
+                </div>
+                <div class="hero-text">
+                    <h2>
+                        Lorem ipsum dolor sit amet
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo.
+                    </p>
+                </div>
+            </div>
+        </header>
 
-    <header class="site-header">
-        <div class="header-top">
-            <div class="logo">
-                <a href="index.html">Freaky Fashion</a> </div>
-            <div class="search-icon">
-                <a href="#">&#x1F50D;</a> </div>
+        <div class="products-wrapper">
+
+
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">                            
+                        &#x2764; 
+                    </div>
+                    <div class="product-overlay overlay-banner">
+                        Nyheter
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">                            
+                        &#x2764; 
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+
+
+
         </div>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="#">Nyheter</a></li>
-                <li><a href="#">Bästsäljare</a></li>
-                <li><a href="#">Kvinnor</a></li>
-                <li><a href="#">Män</a></li>
-                </ul>
-        </nav>
-    </header>
 
-    <main class="site-main">
-        <section class="hero">
-            <img src="images/placeholder-hero.png" alt="Hero image placeholder"> <h2>Lorem ipsum dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        </section>
-
-        <section class="content-block">
-             <img src="images/placeholder-content.png" alt="Content image placeholder"> <h2>Lorem ipsum dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-        </section>
-
-        <section class="product-grid">
-            <h2>Nyheter</h2> <div class="grid-container">
-                <article class="product-card">
-                    <a href="product-details.html"> <img src="images/placeholder-product.png" alt="Svart T-Shirt placeholder"> <h3>Svart T-Shirt</h3>
-                        <p class="price">199 SEK</p>
-                    </a>
-                    </article>
-                <article class="product-card">
-                     <a href="product-details.html">
-                        <img src="images/placeholder-product.png" alt="Svart T-Shirt placeholder">
-                        <h3>Svart T-Shirt</h3>
-                        <p class="price">199 SEK</p>
-                    </a>
-                </article>
-                 <article class="product-card">
-                    <a href="product-details.html">
-                        <img src="images/placeholder-product.png" alt="Svart T-Shirt placeholder">
-                        <h3>Svart T-Shirt</h3>
-                        <p class="price">199 SEK</p>
-                    </a>
-                </article>
-                 <article class="product-card">
-                     <a href="product-details.html">
-                        <img src="images/placeholder-product.png" alt="Svart T-Shirt placeholder">
-                        <h3>Svart T-Shirt</h3>
-                        <p class="price">199 SEK</p>
-                    </a>
-                </article>
+        <div class="perks-wrapper">
+            <div class="perk-item">
+                <div class="perk-icon">
+                    🌐
+                </div>
+                <div class="perk-text">
+                    Around the worlds
+                </div>
             </div>
-        </section>
-
-        <section class="feature-blocks">
-             <div>Gratis frakt och returer</div>
-             <div>Expressfrakt</div>
-             <div>Säkra betalningar</div>
-             <div>Nyheter varje dag</div>
-        </section>
-
-    </main>
-
-    <footer class="site-footer">
-        <nav class="footer-nav">
-            <div>
-                <h4>Shopping</h4>
-                <ul>
-                    <li><a href="#">Vinterjackor</a></li>
-                    <li><a href="#">Pufferjackor</a></li>
-                    <li><a href="#">Kappa</a></li>
-                    <li><a href="#">Trenchcoats</a></li>
-                </ul>
+            <div class="perk-item">
+                <div class="perk-icon">
+                    ✈
+                </div>
+                <div class="perk-text">
+                    Around the worlds
+                </div>
             </div>
-             <div>
-                <h4>Mina Sidor</h4>
-                <ul>
-                    <li><a href="#">Mina Ordrar</a></li>
-                    <li><a href="#">Mitt Konto</a></li>
-                </ul>
-            </div>
-             <div>
-                <h4>Kundtjänst</h4>
-                 <ul>
-                    <li><a href="#">Returpolicy</a></li>
-                    <li><a href="#">Integritetspolicy</a></li>
-                </ul>
-            </div>
-        </nav>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Freaky Fashion / EC</p> </div>
-    </footer>
-
+        </div>
+    </div>
 </body>
 </html>
