--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FakeShop | Startsida</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <div class="wrapper">
         <header class="header">
@@ -14,37 +17,41 @@
             </div>
             <div class="actions">
                 <div class="search-bar">
-                    searchbar
+                    <input class="input" type="text" placeholder="Search products...">
+                    <button type="submit" aria-label="Search"> 
+                        <i class="fas fa-search"></i>
+                    </button>
                 </div>
                 <div class="action-buttons">
-                    <div>
-                        heart
-                    </div>
-                    <div>
-                        basket
-                    </div>
-                </div>
-            </div>
-            <ul class="navigation-list">
-                <li>Nyheter</li>
-                <li>Bästsäljare</li>
-                <li>Kvinnor</li>
-                <li>Män</li>
-            </ul>
-            <div class="hero">
-                <div class="hero-image">
-                    <img src="./images/placeholder-hero.jpg" alt="heroPlaceholder">
-                </div>
-                <div class="hero-text">
-                    <h2>
-                        Lorem ipsum dolor sit amet
-                    </h2>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo.
-                    </p>
+                    <button aria-label="Wishlist"> 
+                        <i class="fas fa-heart"></i>
+                    </button>
+                    <button aria-label="Shopping Basket">
+                        <i class="fas fa-shopping-basket"></i>
+                    </button>
                 </div>
             </div>
         </header>
+        <ul class="navigation-list">
+            <li>Nyheter</li>
+            <li>Bästsäljare</li>
+            <li>Kvinnor</li>
+            <li>Män</li>
+        </ul>
+        <div class="hero">
+            <div class="hero-image">
+                <img src="./images/placeholder-hero.jpg" alt="heroPlaceholder">
+            </div>
+            <div class="hero-text">
+                <h2>
+                    Lorem ipsum dolor sit amet
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa
+                    nesciunt nihil aut nostrum explicabo.
+                </p>
+            </div>
+        </div>
 
         <div class="products-wrapper">
 
@@ -53,8 +60,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <img src="./images/product.png" alt="productImage">
-                    <div class="product-overlay overlay-heart">                            
-                        &#x2764; 
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
                     </div>
                     <div class="product-overlay overlay-banner">
                         Nyheter
@@ -72,8 +79,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <img src="./images/product.png" alt="productImage">
-                    <div class="product-overlay overlay-heart">                            
-                        &#x2764; 
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
                     </div>
                 </div>
                 <div class="product-info">
@@ -108,6 +115,72 @@
                 </div>
             </div>
         </div>
+
+        <div class="accordions">
+
+            <div class="accordion-wrapper">
+                <button class="accordion">
+                    Shopping
+                </button>
+                <div class="panel">
+                    <p class="panel-item">Vinterjackor</p>
+                    <p class="panel-item">Pufferjackor</p>
+                    <p class="panel-item">Koppa</p>
+                    <p class="panel-item">Trenchcoats</p>
+                </div>
+            </div>
+    
+            <div class="accordion-wrapper">
+                <button class="accordion">
+                    Mina sidor
+                </button>
+                <div class="panel">
+                    <p class="panel-item">Mina Ordrar</p>
+                    <p class="panel-item">Mitt konto</p>
+                </div>
+            </div>
+    
+            <div class="accordion-wrapper">
+                <button class="accordion">
+                    Kundtjänst
+                </button>
+                <div class="panel">
+                    <p class="panel-item">Kontakta oss</p>
+                    <p class="panel-item">Hitta hit</p>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            &#169; FakeShop
+        </footer>
     </div>
+
+
+
+
+
+
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+
+        for (i = 0; i < acc.length; i++) {
+            acc[i].addEventListener("click", function () {
+                /* Toggle between adding and removing the "active" class,
+                to highlight the button that controls the panel */
+                this.classList.toggle("active");
+
+                /* Toggle between hiding and showing the active panel */
+                var panel = this.nextElementSibling;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
+                } else {
+                    panel.style.display = "block";
+                }
+            });
+        }
+    </script>
 </body>
+
 </html>
