--- a/index.html
+++ b/index.html
@@ -92,6 +92,102 @@
                 </div>
             </div>
 
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image">
+                    <img src="./images/product.png" alt="productImage">
+                    <div class="product-overlay overlay-heart">
+                        &#x2764;
+                    </div>
+                </div>
+                <div class="product-info">
+                    <div class="product-info-name">
+                        <h3>T-shirt</h3>
+                        <p>Levis</p>
+                    </div>
+                    <div class="product-info-price">199 SEK</div>
+                </div>
+            </div>
+
 
 
 
@@ -100,18 +196,34 @@
         <div class="perks-wrapper">
             <div class="perk-item">
                 <div class="perk-icon">
-                    🌐
+                    <i class="fa-solid fa-earth-americas"></i>
                 </div>
                 <div class="perk-text">
-                    Around the worlds
+                    Gratis frakt och returer
                 </div>
             </div>
             <div class="perk-item">
                 <div class="perk-icon">
-                    ✈
+                    <i class="fa-solid fa-truck-fast"></i>
                 </div>
                 <div class="perk-text">
-                    Around the worlds
+                    Expressfrakt
+                </div>
+            </div>
+            <div class="perk-item">
+                <div class="perk-icon">
+                    <i class="fa-solid fa-shield"></i>
+                </div>
+                <div class="perk-text">
+                    Säkra betalningar
+                </div>
+            </div>
+            <div class="perk-item">
+                <div class="perk-icon">
+                    <i class="fa-solid fa-face-smile"></i>
+                </div>
+                <div class="perk-text">
+                    Nyheter varje dag
                 </div>
             </div>
         </div>
